--- a/assets/base.css
+++ b/assets/base.css
@@ -2332,6 +2332,6 @@ details-disclosure > details {
 
 
 
-body{
-  background-color: brown;
+.color-background-1{
+  background-color: burlywood;
 }
